syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.lucasmiguins.grpc";
option java_outer_classname = "PixKeymanagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.lucasmiguins;

service KeymanagerRegistraGrpcService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service KeymanagerRemoveGrpcService {
  rpc remove (RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

enum EnumTipoDeChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum EnumTipoDeConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  EnumTipoDeChave tipoDeChave = 2;
  string chave = 3;
  EnumTipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixRequest {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}